refactor HostAppi